# clion-glfw

./: CMakeLists.txt  main.cpp
Dependencies/GLFW/include/glad/: glad.h
Dependencies/GLFW/lib/: glad.c
